fixed overflow in mobile view

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,8 @@
 }
  html{
         scroll-behavior: smooth;
+        overflow-x: hidden;
+        width: 100%;
     }
 
 
@@ -22,7 +24,7 @@ p, span, a, button {
     display: flex;
     margin-top: 15px;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .menu-toggle {
@@ -87,21 +89,6 @@ p, span, a, button {
         transform: translateY(0);
     }
     
-    /* .menu-container {
-        display: none;
-        position: absolute;
-        top: 40px;
-        right: 0;
-        background-color: white;
-        width: 200px;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        padding: 10px;
-        border-radius: 5px;
-    }
-
-    .menu-container.active {
-        display: block;
-    } */
     .nav-links {
         flex-direction: column;
         justify-content: center;
@@ -224,13 +211,12 @@ p, span, a, button {
     letter-spacing: 2%;
     margin: 0px 0;
     color: rgba(9, 75, 114, 0.801);
-    white-space: nowrap; /* Ensures heading stays on one line */
+    white-space: nowrap; 
 }
 
 .hero-p {
     margin-bottom: 20px;
     font-size: 1.3rem;
-    /* white-space: nowrap; Prevents paragraph from breaking */
     width: 62%;
 }
 
@@ -240,7 +226,6 @@ p, span, a, button {
     border-radius: 5px;
     border: none;
     background: rgba(9, 75, 114, 0.801);
-    /* margin-bottom: 50px; */
     cursor: pointer;
 }
 
@@ -262,11 +247,9 @@ p, span, a, button {
     max-width: 320px;
     position: relative;
     top: -20px;
-    /* bottom: px; */
 }
 
   .logo-row {
-    /* display: flex; */
     justify-content: flex-start; 
     flex-wrap: nowrap; 
 }   
@@ -388,12 +371,16 @@ p, span, a, button {
 
 
 @media screen and (max-width: 768px) {
+
+     html body{
+        overflow-x: hidden;
+        width: 100%;
+     }
     .hero-wrapper {
         flex-direction: column;
         align-items: flex-start;
         text-align: left;
         margin-left:50px;
-        
     }
 
     .hero-container{
@@ -930,7 +917,7 @@ p, span, a, button {
     }
 
     .test-con {
-        margin-top: 0px; /* More space for readability */
+        margin-top: 0px; 
         margin: 0 0 100px 0;
     }
 
